Sun Nov 12 22:38:56 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog file in preparation for branching and
	  merging.

Sun Nov 12 19:32:01 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/quartz/quartz_database.cc: Fix replace_document() not to
	  lose positional information for a document if it is replaced with
	  itself with unmodified postings.
	* tests/api_wrdb.cc: Add testcase replace_document5 as regression test
	  for the replace_document bug.
	* backends/remote/remote-database.cc: Fix
	  RemoteDatabase::has_positions() to refetch the cached value if it
	  might be out of date.

Sun Nov 12 17:07:00 GMT 2006  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Need to increase pool_size further still to build
	  sourcedoc.pdf (2000000 now).

Sun Nov 12 16:24:15 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Add "update ReleaseNotes on wiki" to release checklist.

Sun Nov 12 16:23:19 GMT 2006  Olly Betts <olly@survex.com>

	* xapian.spec.in: Remove "." from end of "Summary:".  Package
	  new man page for xapian-progsrv.

Sun Nov 12 00:43:36 GMT 2006  Olly Betts <olly@survex.com>

	* docs/stemming.html: Update another "CVS" reference to say "SVN".

Sun Nov 12 00:42:22 GMT 2006  Olly Betts <olly@survex.com>

	* docs/install.html: Update reference to "CVS" to say "SVN".

Thu Nov 09 01:11:52 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Reorder the release checklist a little.  I've fixed
	  update_website.sh to get the latest version from version.php, so
	  now only version.php needs updating.

Thu Nov 09 00:17:35 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Update for 0.9.9.

Wed Nov 08 20:54:31 GMT 2006  Olly Betts <olly@survex.com>

	* xapian.spec.in: Apply changes from Neal Becker to run "autoreconf
	  --force" so that we don't set rpath for /usr/lib64, and add "libs"